--- a/counsellingApp/templates/app/availiable.html
+++ b/counsellingApp/templates/app/availiable.html
@@ -48,6 +48,10 @@
 
 }
 
+#period{
+  font-size:15px;
+  color:rgba(0,0,0,0.5);
+}
 </style>
 
 <section id="section12">
@@ -111,7 +115,14 @@
 </div>
 
      </div>
+<!---->
+<div class ="row">
+  <div class="col-sm-12" >
+    <p id = "period">Periods</p>
+    <hr>
 
+  </div>
+</div>
       </div>
     </div>
   </div>
