--- a/counsellingApp/templates/app/availiable.html
+++ b/counsellingApp/templates/app/availiable.html
@@ -125,7 +125,8 @@
   <div class="col-sm-12" >
     <p id = "period">Periods</p>
     <hr>
-
+  </div>
+  <div class="col-sm-12">
   </div>
 </div>
       </div>
