--- a/counsellingApp/templates/app/availiable.html
+++ b/counsellingApp/templates/app/availiable.html
@@ -52,6 +52,7 @@
   font-size:15px;
   color:rgba(0,0,0,0.5);
 }
+
 </style>
 
 <section id="section12">
@@ -121,13 +122,112 @@
 
      </div>
 <!---->
-<div class ="row">
   <div class="col-sm-12" >
     <p id = "period">Periods</p>
     <hr>
   </div>
-  <div class="col-sm-12">
-    
+<div class ="row">
+<div class = "col-sm-1">
+  <div class="form-group">
+  <input
+                  type="text"
+                  class="form-control"
+                />
+<input type="checkbox" > Not availiable</input>
+
+</div>
+</div>
+<!---->
+<div class = "col-sm-1">
+  <div class="form-group">
+  <input
+                  type="text"
+                  class="form-control"
+                />
+
+</div>
+</div>
+<div class = "col-sm-1">
+  <div class="form-group">
+  <input
+                  type="text"
+                  class="form-control"
+                />
+
+</div>
+</div><div class = "col-sm-1">
+  <div class="form-group">
+  <input
+                  type="text"
+                  class="form-control"
+                />
+
+</div>
+</div><div class = "col-sm-1">
+  <div class="form-group">
+  <input
+                  type="text"
+                  class="form-control"
+                />
+
+</div>
+</div><div class = "col-sm-1">
+  <div class="form-group">
+  <input
+                  type="text"
+                  class="form-control"
+                />
+
+</div>
+</div><div class = "col-sm-1">
+  <div class="form-group">
+  <input
+                  type="text"
+                  class="form-control"
+                />
+
+</div>
+</div><div class = "col-sm-1">
+  <div class="form-group">
+  <input
+                  type="text"
+                  class="form-control"
+                />
+
+</div>
+</div><div class = "col-sm-1">
+  <div class="form-group">
+  <input
+                  type="text"
+                  class="form-control"
+                />
+
+</div>
+</div><div class = "col-sm-1">
+  <div class="form-group">
+  <input
+                  type="text"
+                  class="form-control"
+                />
+
+</div>
+</div><div class = "col-sm-1">
+  <div class="form-group">
+  <input
+                  type="text"
+                  class="form-control"
+                />
+
+</div>
+</div><div class = "col-sm-1">
+  <div class="form-group">
+  <input
+                  type="text"
+                  class="form-control"
+                />
+
+</div>
+</div>
   </div>
 </div>
       </div>
