--- a/counsellingApp/templates/app/availiable.html
+++ b/counsellingApp/templates/app/availiable.html
@@ -88,6 +88,8 @@
        {% endif%}
        <hr>
      </div>
+
+     {% for avail in availiable%}
      <div class = "row">
       <div class="col-sm-3">
       <div class="form-group">
@@ -96,6 +98,7 @@
                   class="form-control"
                 />
                 <label for="usr"> Slots </label>
+                
 
                     </div>
                     </div>
@@ -138,98 +141,11 @@
 </div>
 </div>
 <!---->
-<div class = "col-sm-1">
-  <div class="form-group">
-  <input
-                  type="text"
-                  class="form-control"
-                />
 
-</div>
-</div>
-<div class = "col-sm-1">
-  <div class="form-group">
-  <input
-                  type="text"
-                  class="form-control"
-                />
-
-</div>
-</div><div class = "col-sm-1">
-  <div class="form-group">
-  <input
-                  type="text"
-                  class="form-control"
-                />
-
-</div>
-</div><div class = "col-sm-1">
-  <div class="form-group">
-  <input
-                  type="text"
-                  class="form-control"
-                />
-
-</div>
-</div><div class = "col-sm-1">
-  <div class="form-group">
-  <input
-                  type="text"
-                  class="form-control"
-                />
-
-</div>
-</div><div class = "col-sm-1">
-  <div class="form-group">
-  <input
-                  type="text"
-                  class="form-control"
-                />
-
-</div>
-</div><div class = "col-sm-1">
-  <div class="form-group">
-  <input
-                  type="text"
-                  class="form-control"
-                />
-
-</div>
-</div><div class = "col-sm-1">
-  <div class="form-group">
-  <input
-                  type="text"
-                  class="form-control"
-                />
-
-</div>
-</div><div class = "col-sm-1">
-  <div class="form-group">
-  <input
-                  type="text"
-                  class="form-control"
-                />
-
-</div>
-</div><div class = "col-sm-1">
-  <div class="form-group">
-  <input
-                  type="text"
-                  class="form-control"
-                />
-
-</div>
-</div><div class = "col-sm-1">
-  <div class="form-group">
-  <input
-                  type="text"
-                  class="form-control"
-                />
-
-</div>
-</div>
   </div>
 </div>
+      {% endfor %}
+
       </div>
        </form>
 
