--- a/counsellingApp/templates/app/admin.html
+++ b/counsellingApp/templates/app/admin.html
@@ -36,16 +36,17 @@
           </p>
           <!---->
           {% else%}{% endif%} {% endfor%}
-
+        <div class="col-sm-3">
           <div class="dropdown-content">
             <a href="{% url 'counsellingUrls:loginPage'%}">LOGOUT</a>
           </div>
+        </div>
         </div>
       </div>
       <div id="midcontent6">
         <p id="midtext">Profile</p>
       </div>
-      <div class="container">
+      <div class="col-sm-12">
         <div class="row">
           <div class="col-lg-3 col-sm-6">
             <div class="card-box bg-blue">
