--- a/counsellingApp/templates/app/assets/main.css
+++ b/counsellingApp/templates/app/assets/main.css
@@ -79,8 +79,9 @@
     height:100%;
     font-family: Montserrat;
     display:  block;
+   
     overflow-y: scroll;
-    
+     overflow-x: hidden;
     animation-name: example;
     animation-duration: 1s;
 
