--- a/counsellingApp/templates/app/availiable.html
+++ b/counsellingApp/templates/app/availiable.html
@@ -11,9 +11,11 @@
 
 
 #able{
+    
      text-decoration: none;
      padding:5%;
-     display:flex;  
+     display:flex;
+     font-family: Helvetica;  
     
 }
 
@@ -114,7 +116,7 @@
     </div>
     
 
-    <div class="col-sm-10" style="padding: 2%; padding-right: 3%">
+    <div class="col-sm-10" style="padding: 2%; padding-right: 3%;">
       <form action = "" method = "post">
         {% csrf_token %}
     <div class="col-sm-12" id="avapad">
