--- a/counsellingApp/templates/app/assets/main.css
+++ b/counsellingApp/templates/app/assets/main.css
@@ -288,9 +288,10 @@ section {
 
 
 #what{
-    width:30%;
-    height:20%;
-    border-radius:35px;
+    width:100%;
+    height:50%;
+
+    
 }
 
 
@@ -929,10 +930,12 @@ button:focus{
   float:left;
   width: 250px;
   height: 200px;
+  clip-path: circle(60%);
+object-fit: cover;
  
 }
    
-}
+
 
 #sort1 {
     float: left;
@@ -1875,6 +1878,9 @@ body {
     width: 25%;
     height: 70%;
     float: left;
+    object-fit: cover;
+
+
    
    
 }
