--- a/counsellingApp/templates/app/availiable.html
+++ b/counsellingApp/templates/app/availiable.html
@@ -153,6 +153,9 @@
 
                     </div>
                     </div>
+                   <div class="col-sm-3">
+     <button type="submit" class="btn btn-success"><i class="fa fa-clock"></i> Generate time</button>
+                   </div>
 
                         </div>
                     <!---->
