--- a/counsellingApp/templates/app/availiable.html
+++ b/counsellingApp/templates/app/availiable.html
@@ -154,7 +154,7 @@
                     </div>
                     </div>
                    <div class="col-sm-3">
-     <button type="submit" class="btn btn-success"><i class="fa fa-clock"></i> Generate time</button>
+     <button type="submit" class="btn btn-success"><i class="fa fa-clock"></i> Generate my time</button>
                    </div>
 
                         </div>
