--- a/counsellingApp/templates/app/availiable.html
+++ b/counsellingApp/templates/app/availiable.html
@@ -103,33 +103,36 @@
       </div>
      
       <div class="col-sm-12" style="padding-top:20%;font-family:Times New Roman;">
-        <a href="{% url 'counsellingUrls:days' 'MONDAY'%}" id="able"><span><i class="fas fa-cloud-sun" id = "ableicon"></i></span><span id = "ables"> MONDAY</span></a><br />
-        <a href="{% url 'counsellingUrls:days' 'TUESDAY'%}" id="able"><span><i class="fas fa-cloud-sun" id = "ableicon"></i></span><span id = "ables"> TUESDAY</span></a><br />
-        <a href="{% url 'counsellingUrls:days' 'WEDNESDAY'%}" id="able"><span><i class="fas fa-cloud-sun" id = "ableicon"></i></span><span id = "ables"> WEDNESDAY</span></a><br />
-        <a href="{% url 'counsellingUrls:days' 'THRUSDAY' %}" id = "able"><span><i class="fas fa-cloud-sun" id = "ableicon"></i></span><span id = "ables"> THRUSDAY</span></a><br />
-        <a href="{% url 'counsellingUrls:days' 'FRIDAY'%}" id="able"><span><i class="fas fa-cloud-sun" id = "ableicon"></i></span><span id = "ables"> FRIDAY</span></a><br />
-        <a href="{% url 'counsellingUrls:days' 'SATURDAY'%}" id="able"><span><i class="fas fa-cloud-sun" id = "ableicon"></i></span><span id = "ables"> SATURDAY</span></a><br />
-        <a href="{% url 'counsellingUrls:days' 'SUNDAY'%}" id="able"><span><i class="fas fa-cloud-sun" id = "ableicon"></i></span><span id = "ables"> SUNDAY</span></a><br />
+        <a href="{% url 'counsellingUrls:days' pk 'MONDAY'%}" id="able"><span><i class="fas fa-cloud-sun" id = "ableicon"></i></span><span id = "ables"> MONDAY</span></a><br />
+        <a href="{% url 'counsellingUrls:days' pk 'TUESDAY'%}" id="able"><span><i class="fas fa-cloud-sun" id = "ableicon"></i></span><span id = "ables"> TUESDAY</span></a><br />
+        <a href="{% url 'counsellingUrls:days' pk 'WEDNESDAY'%}" id="able"><span><i class="fas fa-cloud-sun" id = "ableicon"></i></span><span id = "ables"> WEDNESDAY</span></a><br />
+        <a href="{% url 'counsellingUrls:days' pk 'THRUSDAY' %}" id = "able"><span><i class="fas fa-cloud-sun" id = "ableicon"></i></span><span id = "ables"> THRUSDAY</span></a><br />
+        <a href="{% url 'counsellingUrls:days' pk 'FRIDAY'%}" id="able"><span><i class="fas fa-cloud-sun" id = "ableicon"></i></span><span id = "ables"> FRIDAY</span></a><br />
+        <a href="{% url 'counsellingUrls:days' pk 'SATURDAY'%}" id="able"><span><i class="fas fa-cloud-sun" id = "ableicon"></i></span><span id = "ables"> SATURDAY</span></a><br />
+        <a href="{% url 'counsellingUrls:days' pk 'SUNDAY'%}" id="able"><span><i class="fas fa-cloud-sun" id = "ableicon"></i></span><span id = "ables"> SUNDAY</span></a><br />
       </div>
       <div>
       <a href= "{% url 'counsellingUrls:dashboardPage' pk %} " style="color:white;">Back</a>
     </div>
     </div>
     
+    {% if dy%}
+    {{dy}}
+    {% else %}{% endif %}
 
     <div class="col-sm-10" style="padding: 2%; padding-right: 3%;">
-      <form action = "" method = "post">
-        {% csrf_token %}
+     
     <div class="col-sm-12" id="avapad">
           <div class = "col-sm-12" style="padding: 2%;">
-       {% if day%}
+       {% if day %}
        <p id = "day">{{day}}</p>
        {% else %}
       <p id = "day">Please choose a day from the menu</p>
        {% endif%}
        <hr>
      </div>
-
+ <form action = "{% url 'counsellingUrls:time' pk day%}" method = "post">
+        {% csrf_token %}
      <div class = "row" >
 
       <div class="col-sm-3">
@@ -154,7 +157,9 @@
                     </div>
                     </div>
                    <div class="col-sm-3">
-     <button type="submit" class="btn btn-success"><i class="fa fa-clock"></i> Generate my time</button>
+     <button type="submit" class="btn btn-success">
+       <i class="fa fa-clock"></i> 
+       Generate time</button>
                    </div>
 
                         </div>
