--- a/counsellingApp/templates/app/availiable.html
+++ b/counsellingApp/templates/app/availiable.html
@@ -130,11 +130,7 @@
       <p id = "day">Please choose a day from the menu</p>
        {% endif%}
        <hr>
-       {% if time%}
-       <p> worked</p>
-       {% else %}
-<p> didn't work </p>
-{% endif%}
+     
       </div>
  <form action = "{% url 'counsellingUrls:times' pk day%}" method = "post">
         {% csrf_token %}
@@ -166,33 +162,44 @@
        <i class="fa fa-clock"></i> 
        Generate time</button>
                    </div>
-
                         </div>
+                               </form>
+
                     <!---->
                       <div class="col-sm-12" >
                         <p id = "period">Periods</p>
                         <hr>
                           </div>
                             <div class ="row">
-                            <div class = "col-sm-1">
-                              <div class="form-group">
+                            <div class = "col-sm-4" style="border-right: 1px solid rgba(0, 0, 0, 0.1)">
+                               <div class = "col-sm-5">
                               <input
-                                              type="text"
-                                              class="form-control"
-                                            />
-                            <input type="checkbox" > Not availiable</input>
-
-                            </div>
-                            </div>
-                            <!---->
-
+                               type="text"
+                              class="form-control"
+                             
+                              /> 
                               </div>
+                               <div class = "col-sm-1">
+                              -
+                              </div>
+                               <div class = "col-sm-5">
+                              <input
+                              type="text"
+                              class="form-control"
+                            /></div>
+                              <div class = "col-sm-1">
+                                <input type="checkbox" > Not availiable</input>
+                              </div>
+                           </div>
+                          
+                            <!---->
+                              </div>
+                              <br>
       <button type="submit" class="btn btn-primary" >Submit</button>
 
                           </div>
 
       </div>
-       </form>
 
     </div>
 
