--- a/counsellingApp/templates/app/availiable.html
+++ b/counsellingApp/templates/app/availiable.html
@@ -134,6 +134,7 @@
       </div>
  <form action = "{% url 'counsellingUrls:times' pk day%}" method = "post">
         {% csrf_token %}
+        <div class="col-sm-12">
      <div class = "row" >
 
       <div class="col-sm-3">
@@ -163,41 +164,49 @@
        Generate time</button>
                    </div>
                         </div>
+                        </div>
                                </form>
 
                     <!---->
+                    <form action = "{% url 'counsellingUrls:days' pk day%}" method = "POST">
+                      {% csrf_token %}
                       <div class="col-sm-12" >
                         <p id = "period">Periods</p>
                         <hr>
-                          </div>
+                         
                             <div class ="row">
-                            <div class = "col-sm-4" style="border-right: 1px solid rgba(0, 0, 0, 0.1)">
+                          <!---->
+                      <div class = "col-sm-4" 
+                      style="border-right: 1px solid rgba(0, 0, 0, 0.1);
+                      border-bottom: 1px solid rgba(0, 0, 0, 0.1);padding-top:1%;padding-bottom:1%;">
                                <div class = "col-sm-5">
-                              <input
-                               type="text"
-                              class="form-control"
-                             
-                              /> 
+                              
+                  {{availiable.startime}}
                               </div>
                                <div class = "col-sm-1">
                               -
                               </div>
                                <div class = "col-sm-5">
-                              <input
-                              type="text"
-                              class="form-control"
-                            /></div>
-                              <div class = "col-sm-1">
-                                <input type="checkbox" > Not availiable</input>
-                              </div>
-                           </div>
-                          
-                            <!---->
-                              </div>
-                              <br>
-      <button type="submit" class="btn btn-primary" >Submit</button>
+                              
+                           {{availiable.endtime}}
 
                           </div>
+                              <div class = "col-sm-3">
+                              {% comment %} <input  type="checkbox" > Not availiable</input>  {% endcomment %}
+                               {{availiable.not_availiable}}
+                              </div>
+                           </div>
+                          <!---->
+                          
+                            <!---->
+                              </div> 
+                              <br><br>
+                              <div style = "padding-bottom:2%;">
+      <button type="submit" class="btn btn-primary" >Submit</button>
+      </div>
+</div>
+                          </div>
+                        </form>
 
       </div>
 
