--- a/counsellingApp/templates/app/availiable.html
+++ b/counsellingApp/templates/app/availiable.html
@@ -192,8 +192,7 @@
 
                           </div>
                               <div class = "col-sm-3">
-                              {% comment %} <input  type="checkbox" > Not availiable</input>  {% endcomment %}
-                               {{availiable.not_availiable}}
+                               {{availiable.not_availiable}} Not availiable
                               </div>
                            </div>
                           <!---->
