--- a/counsellingApp/templates/app/availiable.html
+++ b/counsellingApp/templates/app/availiable.html
@@ -128,7 +128,7 @@
        {% if day %}
        <p id = "day">{{day}}</p>
        {% else %}
-      <p id = "day">Please choose a days from the menu</p>
+      <p id = "day">Please choose a day from the menu</p>
        {% endif%}
        <hr>
      
